--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,8 +31,9 @@ jobs:
                 username: ${{ secrets.USERNAME }}
                 key: ${{ secrets.KEY }}
                 run: |
-                  sudo docker pull ${{ secrets.DOCKER_USERNAME }}/wp-image:stable
-                  sudo docker run -d -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/wp-image:stable
+                 sudo docker pull ${{ secrets.DOCKER_USERNAME }}/wp-image:stable && sudo docker run -d -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/wp-image:stable
+
+                  
 
             
  
