--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -32,9 +32,9 @@ jobs:
                 key: ${{ secrets.KEY }}
                 script: |
 
-                 scp -i ${{ secrets.KEY }} docker-compose.yml ${{ secrets.USERNAME }}@${{ secrets.HOST }}:/home/ubuntu/docker
-                 docker compose -f /home/ubuntu/docker/docker-compose.yml pull
-                 docker compose -f /home/ubuntu/docker/docker-compose.yml up 
+                 scp -i ${{ secrets.KEY }} docker-compose.yml ${{ secrets.USERNAME }}@${{ secrets.HOST }}:ubuntu/docker
+                 sudo docker compose -f /home/ubuntu/docker/docker-compose.yml pull
+                 sudo docker compose -f /home/ubuntu/docker/docker-compose.yml up 
 
                 # sudo docker pull ${{ secrets.DOCKER_USERNAME }}/wp-image:stable && sudo docker run -d -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/wp-image:stable
 
