--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,34 @@
-# version: '3.8'
-
-# services:
-#   app:
-#     build:
-#       context: .
-#       dockerfile: Dockerfile
-#     ports:
-#       - "3000:3000"
-
 version: '3.8'
+
 services:
-  my_service:
-    image: sulavadk7/wp-image:stable
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "3000:3000" 
+      - "3000:3000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.services.app.loadbalancer.server.port=3000"
+      - "traefik.http.routers.app.rule=Host(`dev.localhost`)"
+      - "traefik.http.routers.app.entrypoints=websecure"
+      - "traefik.http.routers.app.tls=true"
+
+  reverse-proxy:
+    image: traefik:v2.10
+    # command:
+    #   - "--api.insecure=true"
+    #   - "--providers.docker=true"
+    #   - "--providers.docker.exposedbydefault=false"
+    #   - "--entryPoints.web.address=:80"
+    #   - "--entryPoints.websecure.address=:443"
+
+    ports:
+      - "80:80"
+      - "8080:8080"
+      - "443:443"
+
+    volumes:
+      - "./certs:/certs"
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "./traefik.yml:/etc/traefik/traefik.yml"  # Mount your Traefik configuration file
